# brains

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yaml
brains/: __init__.py  brain.py  camera.py  control.py  grasp.py  prompts.py  tools.py  utils.py
models/openwakeword/: hey_laiika.onnx  hey_laiika.tflite  hey_robot.onnx  hey_robot.tflite
stl/arm/: arm_wrist_cam_mount.stl  arm_wrist_gripper_long.stl  arm_wrist_gripper_wide.stl
stl/body/: body_bottom.stl  body_bottom_mirror.stl  body_main.stl  body_side_jetson.stl
stl/head/: head_side.stl  head_side_mirror.stl  head_top.stl
