[tool.poetry]
name = "brains"
version = "0.1.0"
description = ""
authors = ["Alexander Smirnov <alex@asmirnov.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyaudio = "^0.2.14"
openwakeword = "^0.6.0"
openai = "^1.13.3"
elevenlabs = "0.3.0b0"
loguru = "^0.7.2"
fire = "^0.6.0"
pydantic-settings = "^2.2.1"
torch = { version = "2.3", source = "pytorch-cpu" }
torchvision = { version = "0.18", source = "pytorch-cpu" }
pyrealsense2 = "^2.55.1.6486"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
regex = "2024.4.16"
transformers = "^4.40.1"
transforms3d = "^0.4.1"
modern-robotics = "^1.1.1"
lark = "^1.1.9"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
traitlets = "5.9.0"
notebook = "6.4.12"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
